# Jiyo_An_Django

./: pyproject.toml  secrets.json
config/: settings.py
posts/: views.py
